--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "SHEWON-MD-BOT",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/CyberKing4/SHEWON-MD-BOT",
-  "logo": "https://telegra.ph/file/640ec55270602dfad216b.jpg",
+  "logo": "https:https://i.ibb.co/PQxJ40y/null-20220820-WA0001.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
